--- a/main.css
+++ b/main.css
@@ -1,7 +1,13 @@
 #canvas-container {
    width: 100%;
    height: 100%;
-   text-align:center;   
+   text-align:center;  
+   -webkit-touch-callout: none;
+   -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
 }
 
 canvas {    
